welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: value SiestFaceMurEstVraie is not a member of Unit
	 recule SiestFaceMurEstVraie();
                ^Program:3: error: value SiestFaceMurEstVraie is not a member of Unit
}else{ avance SiestFaceMurEstVraie();
              ^