welcome.lessons.welcome.conditions.Conditions.scala.code
if(estFaceMur){
	 recule SiestFaceMurEstVraie();
}else{ avance SiestFaceMurEstVraie();
}